Add pictures for lasagna and pizza

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <p><a href="recipes/grilled-cheese.html" target="_blank" rel="noopener noreferrer">Grilled Cheese</a></p>
-    <p><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></p></p>
+    <p><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></p>
     <p><a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">Pizza</a></p>
 </body>
 </html>
