--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pizza Recipe</title>
 </head>
 <body>
     <h1>Pizza</h1>
+    <img src="../recipe-images/pizza-image.jpg" alt="It's a picture of pizza">
 </body>
 </html>
