Add descriptions under each dish image

--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grilled Cheese Recipe</title>
 </head>
 <body>
     <h1>Grilled Cheese</h1>
     <img src="../recipe-images/grilled-cheese-image.jpg" alt="It's a picture of a grilled cheese sandwich.">
+    <p><h4>Picture of a delicious grilled cheese sandwich. Boy, I love grilled cheese sandwiches!</h4></p>
 </body>
 </html>
