--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../recipe-images/lasagna-image.jpg" alt="It's a picture of lasagna">
+    <p><h4>Picture of fresh, delicious lasagna. I can make this! Mmmm, yummy!</h4></p>
 </body>
 </html>
