Add steps and update grilled cheese picture
Had forgotten steps header, grilled cheese image was too large

--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -18,6 +18,7 @@
         <li>Pan</li>
         <li>Parchment Paper</li>
     </ul>
+    <h4>Steps</h4>
     <ol>
         <li>Place parchment paper on pan</li>
         <li>Place two pieces of bread on parchment paper</li>
