Add a more detailed grilled cheese description
we will see if this works..

--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -8,7 +8,11 @@
 <body>
     <h1>Grilled Cheese</h1>
     <img src="../recipe-images/grilled-cheese-image.jpg" alt="It's a picture of a grilled cheese sandwich.">
-    <p><h6>Picture of a delicious grilled cheese sandwich. Boy, I love grilled cheese sandwiches!</h6></p>
+    <h6>Picture of a delicious grilled cheese sandwich, ready to eat (mmmm, yummy)</h6>
+    <p>The grilled cheese sandwich is one of the oldest, most influental recipes of the human era. There is evidence suggesting the grilled cheese can be 
+        dated all the way back to the Paleolithic period (when when the woolly mammoth still roamed the earth!). Can you imagine only having rocks and sticks and trying to 
+    conjure up a grilled cheese sandwich? I don't know how they did it, I guess that's a testiment to how creative and resilient humans are. Anyway, here is a simple way to 
+recreate (in the most modern, lazy sense of the word) a grilled cheese sandwich! I hope you find it easy and helpful, enjoy!</p>
     <h4> Ingredients</h4>
     <ul>
         <li>Cheese</li>
