Add css styling to homepage
Add homepage image, coloring, font size changes and positioning

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Vexon's Recipes</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <p><a href="recipes/grilled-cheese.html" target="_blank" rel="noopener noreferrer">Grilled Cheese</a></p>
-    <p><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></p>
-    <p><a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer">Pizza</a></p>
+    <div class="title"><h1>Vexon's Odin Recipes</h1></div>
+    <img class="food-image" src="recipe-images/food-background-image.png" alt="Heart made from food">
+    <a href="recipes/grilled-cheese.html" target="_blank" rel="noopener noreferrer"><p>Grilled Cheese</p></a>
+    <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer"><p>Lasagna</p></a>
+    <a href="recipes/pizza.html" target="_blank" rel="noopener noreferrer"><p>Pizza</p></a>
 </body>
 </html>
